--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,32 @@
     padding: 0;
 }
 
+header {
+    background-color: blue;
+    height: 300px;
+}
+
 main {
-    max-width: 80%;
+    max-width: 55%;
     margin-left: auto;
     margin-right: auto;
     background-color: red;
+    height: 1000px;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.col-1 {
+    flex-grow: 1;
+}
+
+.col-2 {
+    flex-grow: 3;
+}
+
+.col-3 {
+    flex-grow: 1;
 }
