--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,400;0,700;1,200&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: blue;
-    height: 300px;
+    height: 150px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body{
+    background-image: url("../assets/images/bg.png");
+    background-attachment: fixed;
+    color: black;
+    font-family: 'Kanit', sans-serif;
+}
+
+.header_title{
+    text-align: center;
+    font-size: 40px;
 }
 
 main {
-    max-width: 55%;
+    margin: 20px;
+    border-radius: 10px;
+    max-width: 50%;
     margin-left: auto;
     margin-right: auto;
-    background-color: red;
-    height: 1000px;
+    background-color: white;
+    border: 2px solid white;
 }
 
 .flex-container {
@@ -21,14 +41,34 @@ main {
     justify-content: space-around;
 }
 
+ul{
+    list-style-type: none;
+}
+
 .col-1 {
-    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    flex: 1;
 }
 
 .col-2 {
-    flex-grow: 3;
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 10px;
 }
 
 .col-3 {
-    flex-grow: 1;
+    flex: 1;
+     display: flex;
+    justify-content: center;
+}
+
+#simple_gif{
+    height: 100px;
+    width: 100px;
 }
