<a> buttons added and a bit of styling too

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,400;0,700;1,200&display=swap');
 
+:root {
+    --nav-padding: 10px;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -29,7 +33,7 @@ body{
 main {
     margin: 20px;
     border-radius: 10px;
-    max-width: 50%;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     background-color: white;
@@ -39,6 +43,7 @@ main {
 .flex-container {
     display: flex;
     justify-content: space-around;
+    text-align: center;
 }
 
 ul{
@@ -49,6 +54,7 @@ ul{
     display: flex;
     justify-content: center;
     flex: 1;
+    padding: var(--nav-padding);
 }
 
 .col-2 {
@@ -56,19 +62,38 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px 10px;
+    padding: 30px; 
     border: 2px solid black;
     border-radius: 10px;
-    margin: 10px;
+    flex-basis: 200px;
 }
 
 .col-3 {
     flex: 1;
-     display: flex;
+    display: flex;
     justify-content: center;
+    padding: var(--nav-padding);
 }
 
 #simple_gif{
     height: 100px;
     width: 100px;
+}
+
+img{
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Navbar buttons */
+
+a {
+    width: 60px;
+    height: 60px;
+    background-color: red;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
